--- a/src/Components/SplashScreen.module.css
+++ b/src/Components/SplashScreen.module.css
@@ -26,8 +26,10 @@
     margin-top: 16px; /* Adjust as per your needs */
     display: flex;
     align-items: flex-end;
-    width: 322px;
-    height: 56px;
 
+}
+
+.welcomeName Link{
+  text-decoration: none;
 }
 
