--- a/src/Pages/Welcome.module.css
+++ b/src/Pages/Welcome.module.css
@@ -4,12 +4,13 @@
   /* align-items: center; */
   flex-direction: row;
   height: 100vh;
+  width: 100%;
 }
 
 .floatChild1 {
   padding-left: 8.34rem;
   padding-top: 4rem;
-  height: 37rem;
+  height: 35rem;
 }
 
 .floatChild2 {
@@ -17,7 +18,7 @@
   display: flex;
   flex-direction: column;
   /* gap: 4px; */
-  padding-left: 50px;
+  padding: 5%;
   padding-top: 6.3rem;
   align-items: center;
   margin-left: 20px;
